--- a/front/static/css/style.scss
+++ b/front/static/css/style.scss
@@ -15,11 +15,31 @@ h2{
   text-align: center;
 }
 
+a{
+  margin: 20px 0;
+  padding: 5px;
+  color: white;
+  text-decoration: none;
+  border:solid white 1px;
+  border-radius: 5px;
+  transition: .5s;
+  &:hover{
+    background-color: white;
+    color: black;
+  }
+}
+
+i{
+  color: white;
+  cursor: pointer;
+}
+
 .app{
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .sign-up-box{
@@ -99,6 +119,28 @@ select{
   justify-content: center;
 }
 
+.user-card{
+  margin: 20px 0;
+  color: white;
+  background: rgba(0,0,0,.5);
+  box-shadow: 0 15px 25px rgba(0,0,0,.6);
+  padding: 18px;
+  border-radius: 10px;
 
+  .user-name{
+    font-size: 20px;
+  }
+  .user-info{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    font-weight: 300;
+  }
+}
 
+.page-arrow{
+  margin: 10px 0;
+  display: flex;
+  gap: 15px
+}
 
